testing build and test in pipeline

--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
     "cypress:open": "cypress open",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "cypress run",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
