--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:ui": "rm -rf client/build && cd client && npm run build && cp -r build ../server",
+    "build": "cd client && npm run build",
     "deploy": "git push heroku master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
+    "lint": "eslint './**/*.{js,jsx}'",
     "start": "node server",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon server"
@@ -18,6 +19,10 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "eslint": "^7.17.0",
+    "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-react": "^7.22.0",
     "nodemon": "^2.0.4"
   }
 }
