--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,6 +27,8 @@ jobs:
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
-          command: cd client && npm run test
+          command: |
+            cd client
+            npm run test
           start: npm start
           wait-on: http://localhost:5000
