fixing action test commands

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,6 +27,6 @@ jobs:
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
-          project: ./client
+          command: npm run test:e2e
           start: npm start
           wait-on: http://localhost:5000
