--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint './**/*.{js,jsx}'",
     "start": "node server",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "test:e2e": "cypress run",
     "watch": "nodemon server"
   },
   "author": "Teemu Kostamo",
@@ -19,6 +20,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "cypress": "^6.2.1",
     "eslint": "^6.6.0",
     "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-flowtype": "^5.2.0",
