--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -37,9 +37,9 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: boiling-escarpment-70015
           heroku_email: teemu.kostamo@hotmail.com
-          # healthcheck: https://boiling-escarpment-70015.herokuapp.com/health
-          # checkstring: 'ok'
-          # rollbackonhealthcheckfailed: true
+          healthcheck: https://boiling-escarpment-70015.herokuapp.com/health
+          checkstring: 'ok'
+          rollbackonhealthcheckfailed: true
       - uses: actions/checkout@v2
       - name: Bump version and push tag
         if: ${{ github.event_name == 'push' && !contains(join(toJson(github.event.commits.*.message)), '#skip') }}
